--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Basic
-title: bsmali4关注网络安全
+title: 恶魔焦的小兔窝
 subtitle: 个人小窝
-description: python和java的故事~
+description: 什么都略懂一点~
 # 头像里面的标题
-avatarTitle: bsmali4
+avatarTitle: 恶魔焦
 # 头像里面的描述
 avatarDesc: 网络安全 / 编程开发
 url: "http://www.codersec.net"
@@ -16,10 +16,9 @@ comment:
 # Social
 social:
     weibo: no 
-    github: bsmali4
+    github: S0uLHun43r
     # twitter: 
-    mail: root@codersec.net
-
+    mail: root@catchrabbit.cc
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 
